--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-tabs": "^1.0.4",
     "@tailwindcss/forms": "^0.5.9",
     "axios": "^1.7.9",
     "lucide-react": "^0.469.0",
@@ -23,6 +24,7 @@
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.20",
+    "path": "^0.12.7",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17",
     "vite": "^5.0.8"
