--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-alert-dialog": "^1.1.4",
     "@radix-ui/react-tabs": "^1.0.4",
     "@tailwindcss/forms": "^0.5.9",
     "axios": "^1.7.9",
