Actually loaded the landing page

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,7 @@
 # frontend/.env
 VITE_API_URL=http://localhost:4000
+
+VITE_OKTA_ISSUER=https://lotlinxinc.okta.com/oauth2/default
+VITE_OKTA_CLIENT_ID=0oangkb2upHKx8sgF697
+VITE_OKTA_BASE_URL=http://localhost:3000
+VITE_OKTA_CALLBACK=/login/callback
