--- a/backend/package.json
+++ b/backend/package.json
@@ -9,9 +9,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "@okta/jwt-verifier": "^4.0.1",
+    "@okta/okta-sdk-nodejs": "^7.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-session": "^1.18.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.8.3",
     "passport": "^0.6.0",
